Use '<button>' to ensure click on mobile devices and update responsiveness

--- a/src/app/styles/image-gallery.css
+++ b/src/app/styles/image-gallery.css
@@ -14,6 +14,18 @@
     min-width: 130px;
 }
 
+@media (max-width: 850px) {
+    .image-gallery img {
+        min-width: 60px;
+    }
+}
+
+@media (max-width: 500px) {
+    .image-gallery img {
+        min-width: 30px;
+    }
+}
+
 .image-gallery img:hover {
     cursor: pointer;
 }
